[package]
name = "assuan"
version = "0.0.0"
authors = ["Chawye Hsu <su+git@chawyehsu.com>"]
description = "Assuan protocol primitives in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chawyehsu/assuan-rs"
edition = "2024"
readme = "README.md"
keywords = ["assuan", "gpg", "pinentry"]

[dependencies]
thiserror = "2"
tracing = "0.1"
